# pg_exporter

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  docker-compose.yml  init-db-users.sh  pg_exporter.yml  pg_exporter.yml.dist
.github/workflows/: ci.yml
monitoring/grafana/provisioning/dashboards/: exporter_process_info.json  postgres_wal.json  postgresql.json
monitoring/prometheus/: prometheus.yml
src/: app.rs  cli.rs  collector.rs  config.rs  error.rs  lib.rs  main.rs  util.rs
src/collectors/: mod.rs  pg_activity.rs  pg_archiver.rs  pg_bgwirter.rs  pg_conflict.rs  pg_database.rs  pg_indexes.rs  pg_locks.rs  pg_postmaster.rs  pg_replication.rs  pg_replication_slots.rs  pg_stat_io.rs  pg_statements.rs  pg_storage.rs  pg_tables.rs  pg_wal.rs
src/instance/: mod.rs
src/tests/: integration.rs
src/tests/common/: mod.rs
