[package]
name = "pg_exporter"
version = "0.1.0"
edition = "2024"
authors = ["Rust Wizard <rustwizard.0@gmail.com>"]

[dependencies]
actix-web = "4"
config = "0.15.8"
serde_derive = "1.0"
serde = "1.0"
prometheus = {version="0.14", features = ["process"]}
sqlx = {version="0.8.6", features = [ "postgres", "runtime-tokio", "rust_decimal"]}
anyhow = "1.0.96"
async-trait = "0.1.86"
dyn-clone = "1.0.18"
regex = "1.11.1"
bigdecimal = "0.4.8"
thiserror = "2.0.12"
rust_decimal = "1.38.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
